--- a/MainGame-Nocternity-.CSharp.csproj
+++ b/MainGame-Nocternity-.CSharp.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Assets\Scripts\Jeffs Scripts\WeatherSystem\CloudMovement.cs" />
     <Compile Include="Assets\Scripts\Jeffs Scripts\WeatherSystem\WeatherSystem.cs" />
     <Compile Include="Assets\Scripts\Mudguard.cs" />
+    <Compile Include="Assets\Scripts\NetworkGUI.cs" />
     <Compile Include="Assets\Scripts\PlayerDrive.cs" />
     <Compile Include="Assets\Scripts\PlayerSetup.cs" />
     <Compile Include="Assets\Scripts\SkidTrail.cs" />
